RESOLVED FIXED316390
Regression(314479@main): network process crashes when loading web.whatsapp.com
https://bugs.webkit.org/show_bug.cgi?id=316390
Summary Regression(314479@main): network process crashes when loading web.whatsapp.com
Chris Dumez
Reported 2026-06-05 00:55:16 PDT
Very partial revert of 314479@main since it introduced crashes: ``` Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 WebKit 0x10993eda4 WebKit::Daemon::ConnectionToMachService<WebKit::WebPushD::ConnectionTraits>::initializeConnectionIfNeeded() const::'lambda'(NSObject<OS_xpc_object>*)::operator()(NSObject<OS_xpc_object>*) const + 216 (DaemonConnectionCocoa.mm:98) 1 libxpc.dylib 0x18da6d48c _xpc_connection_call_event_handler + 112 2 libxpc.dylib 0x18da73a58 do_mach_notify_port_destroyed + 276 3 libxpc.dylib 0x18da73910 _Xmach_notify_port_destroyed + 84 ```
Attachments
Chris Dumez
Comment 1 2026-06-05 00:55:32 PDT
Chris Dumez
Comment 2 2026-06-05 00:57:25 PDT
Chris Dumez
Comment 3 2026-06-05 01:35:34 PDT
EWS
Comment 4 2026-06-05 03:53:56 PDT
Committed 314624@main (ada15a682520): <https://commits.webkit.org/314624@main> Reviewed commits have been landed. Closing PR #66537 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.