Unreviewed, very partial revert of 314479@main since it introduced crashes https://bugs.webkit.org/show_bug.cgi?id=316390 rdar://178728999

It introduced crashes in WebKit::Daemon::ConnectionToMachService<WebKit::WebPushD::ConnectionTraits>::initializeConnectionIfNeeded()
with non-CMake builds.

* Source/WebKit/NetworkProcess/Notifications/WebPushDaemonConnection.cpp:
* Source/WebKit/NetworkProcess/Notifications/WebPushDaemonConnection.h: