Source/WebKit/NetworkProcess/Notifications/WebPushDaemonConnection.h
@@ -79,7 +79,6 @@ public:
 
 private:
     Connection(CString&& machServiceName, WebPushDaemonConnectionConfiguration&&);
-    ~Connection();
 
     void newConnectionWasInitialized() const final;
 #if PLATFORM(COCOA)
